kube/skia-public/contest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: contest
  name: contest
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: contest
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: contest
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: contest
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: contest
          image: gcr.io/skia-public/contest:2018-05-23T17_28_11Z-jcgregorio-6e0a038-dirty
          args:
            - "--logtostderr"
            - "--port=:8000"
            - "--prom_port=:20000"
          ports:
            - containerPort: 8000
            - containerPort: 20000
          volumeMounts:
            - name: skia-contest-sa
              mountPath: /var/secrets/google
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
      volumes:
        - name: skia-contest-sa
          secret:
            secretName: skia-contest
