kube/skia-public/debugger-assets.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: debugger-assets
  name: debugger-assets
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: debugger-assets
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: debugger-assets
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: debugger-assets
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: debugger-assets
          image: gcr.io/skia-public/debugger-assets:2018-05-19T02_14_37Z-jcgregorio-612e55b-clean
          args:
            - "--logtostderr"
            - "--port=:8000"
            - "--prom_port=:20000"
            - "--resources_dir=/usr/local/share/debugger-assets"
          ports:
            - containerPort: 20000
            - containerPort: 8000
          resources:
            requests:
              memory: "50Mi"
              cpu: "20m"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 3
