kube/skia-public/docserver-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docserver-preview
  name: docserver-preview
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: docserver-preview
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: docserver-preview
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docserver-preview
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: docserver-preview
          image: gcr.io/skia-public/docserverk:2018-05-19T18_48_58Z-jcgregorio-612e55b-dirty
          args:
            - "--cl_preview=true"
            - "--logtostderr"
            - "--resources_dir=/usr/local/share/docserverk/"
            - "--work_dir=/mnt/docserverk"
            - "--port=:8000"
            - "--prom_port=:20000"
          ports:
            - containerPort: 8000
            - containerPort: 20000
          volumeMounts:
            - name: skia-docs-sa
              mountPath: /var/secrets/google
            - name: docserverk-storage
              mountPath: /mnt/docserverk
          resources:
            requests:
              memory: "2.3Gi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 3
      volumes:
        - name: skia-docs-sa
          secret:
            secretName: skia-docs
        - name: docserverk-storage
          emptyDir:
            medium: Memory
