kube/skia-public/fiddler.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fiddler
  name: fiddler
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: fiddler
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fiddler
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: fiddler
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: fiddler
          image: gcr.io/skia-public/fiddler:2018-05-30T20_43_08Z-jcgregorio-97d91dc-dirty
          args:
            - "--checkout=/tmp/skia/skia/"
            - "--fiddle_root=/tmp"
            - "--logtostderr"
            - "--port=:8000"
            - "--prom_port=:20000"
          ports:
            - containerPort: 20000
            - containerPort: 8000
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.1"
            limits:
              memory: "6Gi"
              cpu: "6"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
