kube/skia-public/jsdoc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jsdoc
  name: jsdoc
spec:
  ports:
    - name: metrics
      port: 20000
    - name: http
      port: 8000
  selector:
    app: jsdoc
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jsdoc
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jsdoc
      annotations:
        prometheus.io.scrape: "true"
        prometheus.io.port: "20000"
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: jsdoc
          image: gcr.io/skia-public/jsdoc:2018-06-01T12_59_15Z-jcgregorio-43191f9-dirty
          args:
            - "--logtostderr"
            - "--port=:8000"
            - "--prom_port=:20000"
            - "--git_repo_dir=/mnt/jsdoc"
          ports:
            - containerPort: 8000
            - containerPort: 20000
          volumeMounts:
            - name: jsdoc-storage
              mountPath: /mnt/jsdoc
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 3
      volumes:
        - name: jsdoc-storage
          emptyDir: {}
