kube/skia-public/prober.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proberk
  name: proberk
spec:
  ports:
    - name: metrics
      port: 20000
  selector:
    app: proberk
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: proberk
spec:
  template:
    metadata:
      labels:
        app: proberk
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 2000 # aka skia
        fsGroup: 2000   # aka skia
      containers:
        - name: proberk
          image: gcr.io/skia-public/proberk:2018-05-19T20_34_44Z-jcgregorio-b64814e-dirty
          args:
            - "--logtostderr"
            - "--config=/etc/proberk/allprobersk.json"
            - "--prom_port=:20000"
            - "--run_every=10s"
          ports:
            - name: metrics
              containerPort: 20000
          resources:
            requests:
              memory: "100Mi"
              cpu: "25m"
          livenessProbe:
            httpGet:
              path: /metrics
              port: 20000
            initialDelaySeconds: 3
            periodSeconds: 3
