kube/skia-public/prom.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  serviceName: "prometheus"
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.1.0
          securityContext:
            runAsUser: 0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
          resources:
            requests:
              memory: "300Mi"
              cpu: "200m"
        - name: configmap-reload
          args:
            - "--volume-dir=/etc/prometheus/"
            - "--webhook-method=POST"
            - "--webhook-url=http://localhost:9090/-/reload"
          image: gcr.io/skia-public/configmap-reload:2018-04-27T17_36_11Z-jcgregorio-0a104d82b21f0c2b40bf5182890c5eab412c8a1b-dirty
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
          resources:
            requests:
              memory: "30Mi"
              cpu: "10m"
        - name: iap-proxy
          args:
            - "--logtostderr"
            - "--aud=/projects/145247227042/global/backendServices/1027167102077704313"
            - "--port=:8080"
            - "--target_port=:9090"
          image: gcr.io/skia-public/iap_proxy:2018-04-27T17_38_38Z-jcgregorio-8fd51e30cdd9748f7446ec34bb1bdfcbeb7af9ba-dirty
          volumeMounts:
            - name: skia-public-auth
              mountPath: /var/secrets/skia-public-auth
          resources:
            requests:
              memory: "30Mi"
              cpu: "200m"
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
        - name: skia-public-auth
          secret:
            secretName: skia-public-auth
  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1000Gi
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
