kube/skia-public/web2.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web2
spec:
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: gcr.io/google-samples/hello-app:2.0
        ports:
          - name: http
            containerPort: 8080
        resources:
          requests:
            memory: "30Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web2
  name: web2
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
  selector:
    app: web2
  type: NodePort
