kube/skia-public/skia-ingress.yaml
# Always run set-backend-timeouts.sh after adding a new backend.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skia-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skia-org
    ingress.gcp.kubernetes.io/pre-shared-cert: skia-org
spec:
  backend:
    serviceName: docserver
    servicePort: 8000
  rules:
    - host: prom2.skia.org
      http:
        paths:
        - backend:
            serviceName: prometheus
            servicePort: 8000
    - host: alerts2.skia.org
      http:
        paths:
        - backend:
            serviceName: alertmanager
            servicePort: 8000
    - host: grafana2.skia.org
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 8000
    - host: debugger.skia.org
      http:
        paths:
        - backend:
            serviceName: debugger
            servicePort: 8000
    - host: debugger-assets.skia.org
      http:
        paths:
        - backend:
            serviceName: debugger-assets
            servicePort: 8000
