kube/skia-public/skiatest-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: skiatest-org-central1
    ingress.gcp.kubernetes.io/pre-shared-cert: skiatest
spec:
  backend:
    serviceName: docserver
    servicePort: 8000
  rules:
    - host: docs.skiatest.org
      http:
        paths:
        - backend:
            serviceName: docserver
            servicePort: 8000
    - host: preview.skiatest.org
      http:
        paths:
        - backend:
            serviceName: docserver-preview
            servicePort: 8000
    - host: prom.skiatest.org
      http:
        paths:
        - backend:
            serviceName: prometheus
            servicePort: 8000
    - host: alerts.skiatest.org
      http:
        paths:
        - backend:
            serviceName: alertmanager
            servicePort: 8000
    - host: grafana.skiatest.org
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 8000
    - host: debugger.skiatest.org
      http:
        paths:
        - backend:
            serviceName: debugger
            servicePort: 8000
    - host: debugger-assets.skiatest.org
      http:
        paths:
        - backend:
            serviceName: debugger-assets
            servicePort: 8000
